@@ -17,6 +17,9 @@ OBJS := $(addprefix $(SYMROOT)/, $(OBJS))
 
 all: $(DIRS_NEEDED) $(OBJS)
 
+#To rebuild boot0 if boot0.s is touched
+$(SYMROOT)/boot0: boot0.s
+
 $(OBJS): $(SRCROOT)/autoconf.inc
 	@echo "	[NASM] $(@F)"
 	@$(NASM) $(@F).s -o $@
